--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -9,6 +9,7 @@ enable-threads = true
 processes = 4
 threads = 1
 master = true
+http-timeout=21660
 #buffer-size = 32768
 #stats = 0.0.0.0:9192
 die-on-term = true
